--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,45 @@
 :root {
-  font-family: system-ui, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
+  line-height: 1.6;
   font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   margin: 0;
-  background: #fafafa;
-  color: #222;
   min-height: 100vh;
 }
 
 h1 {
   font-size: 2em;
-  line-height: 1.1;
+  line-height: 1.2;
   margin: 0;
+  font-weight: 700;
 }
 
 h2 {
   font-size: 1.5em;
   margin: 0 0 1rem 0;
+  font-weight: 600;
 }
 
 h3 {
   font-size: 1.2em;
   margin: 0 0 0.5rem 0;
+  font-weight: 600;
+}
+
+p {
+  margin: 0.5rem 0;
+}
+
+strong {
+  font-weight: 600;
 }
